chore(css): center elements
chore(js): remove pseudocode
chore(js): add helper comments

--- a/style.css
+++ b/style.css
@@ -2,3 +2,11 @@
     margin: 0;
     padding: 0;
 }
+
+main {
+    min-width: 100dvh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
